<resources>
    <string name="app_name">JW Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="del">DEL</string>
    <string name="plus">+</string>
    <string name="x">x</string>
    <string name="ans">ANS</string>
    <string name="_9">9</string>
    <string name="_3">3</string>
    <string name="_6">6</string>
    <string name="e">e</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="minus">-</string>
    <string name="divide">÷</string>
    <string name="ac">AC</string>
    <string name="calc">Calc</string>
    <string name="func">Func</string>
    <string name="u221a">√</string>
    <string name="tan">TAN</string>
    <string name="cos">COS</string>
    <string name="sin">SIN</string>
    <string name="u0025">%</string>
    <string name="Log">Log</string>
    <string name="Ln">ln</string>
    <string name="EXP">EXP</string>
    <string name="a2">a2</string>
    <string name="Obrac">(</string>
    <string name="ax">aX</string>
    <string name="Cbrac">)</string>
    <string name="sin_1">SIN-1</string>
    <string name="tan_1">TAN-1</string>
    <string name="cos_1">COS-1</string>
    <string name="u03c0">π</string>
    <string name="tips">Tips\n\nπ is a mathematical constant, approximately equal to 3.14159\n\ne, also known as Euler\'s number, is a mathematical constant approximately equal to 2.71828\n\nexp stands for exponential, the number before the E is multiplied by 10 to the power of the number after\n\n sine and cosine are trigonometric functions of an angle\n\ntangent of an angle is the trigonometric ratio between the adjacent side and the opposite side of a right triangle containing that angle\n\narcsine of x is defined as the inverse sine function of x, the same applies for arctangent and arccosine\n\nThe square root √ of a number is another number which produces the first number when it is multiplied by itself\n\nln or natural logarithm of a number is its logarithm to the base of the mathematical constant e\n\nlog returns the base 10 logarithm of a number\n\nAX and A2 are your exponents/powers and so should be used to multiply the number by itself the inputted amount of times</string>
    <string name="tipsTitle">Tips</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="close_app">Close App</string>
    <string name="length">Length</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="mass">Mass</string>
    <string name="volume">Volume</string>

    <string-array name="currencyFrom">
        <item>GBP</item>
        <item>EUR</item>
        <item>USD</item>
        <item>DDK</item>
        <item>SEK</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>JPY</item>
        <item>HKD</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>CHF</item>
        <item>MXN</item>
        <item>CZK</item>
        <item>SGD</item>
        <item>THB</item>
        <item>HRK</item>
        <item>BRL</item>
        <item>MYR</item>
        <item>NOK</item>
        <item>CNY</item>
        <item>BGN</item>
        <item>PHP</item>
        <item>PLN</item>
        <item>ZAR</item>
        <item>ISK</item>
        <item>RON</item>
        <item>NZD</item>
        <item>TRY</item>
        <item>RUB</item>
        <item>KRW</item>
        <item>HUF</item>
    </string-array>
    <string-array name="toCurrency">
        <item>EUR</item>
        <item>GBP</item>
        <item>USD</item>
        <item>DDK</item>
        <item>SEK</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>JPY</item>
        <item>HKD</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>CHF</item>
        <item>MXN</item>
        <item>CZK</item>
        <item>SGD</item>
        <item>THB</item>
        <item>HRK</item>
        <item>BRL</item>
        <item>MYR</item>
        <item>NOK</item>
        <item>CNY</item>
        <item>BGN</item>
        <item>PHP</item>
        <item>PLN</item>
        <item>ZAR</item>
        <item>ISK</item>
        <item>RON</item>
        <item>NZD</item>
        <item>TRY</item>
        <item>RUB</item>
        <item>KRW</item>
        <item>HUF</item>
    </string-array>

    <string-array name="lengthArray">
        <item>Meters</item>
        <item>Kilometres</item>
        <item>Centimeters</item>
        <item>Millimetres</item>
        <item>Micrometres</item>
        <item>Nanometres</item>
        <item>Miles</item>
        <item>Yards</item>
        <item>Feet</item>
        <item>Inches</item>
        <item>Nautical Miles</item>
    </string-array>
    <string-array name="massArray">
        <item>Kilograms</item>
        <item>Tonnes</item>
        <item>Grams</item>
        <item>Milligrams</item>
        <item>Micrograms</item>
        <item>Imperial Ton</item>
        <item>US Ton</item>
        <item>Stone</item>
        <item>Pounds</item>
        <item>Ounces</item>
    </string-array>
    <string-array name="volumeArray">
        <item>Milliliters</item>
        <item>US Liquid Gallon</item>
        <item>US Liquid Quart</item>
        <item>US Liquid Pint</item>
        <item>US Liquid Cup</item>
        <item>Fluid Ounces</item>
        <item>US TableSpoon</item>
        <item>US TeaSpoon</item>
        <item>Cubic Meters</item>
        <item>Cubic Feet</item>
        <item>Cubic Inches</item>
        <item>Liters</item>
        <item>Imperial Liquid Gallon</item>
        <item>Imperial Liquid Quart</item>
        <item>Imperial Liquid Pint</item>
        <item>Imperial Liquid Cup</item>
        <item>Imperial TableSpoon</item>
        <item>Imperial TeaSpoon</item>
    </string-array>
</resources>