<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentCalcButtons1">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btn0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_0"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline1" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_1"
        app:layout_constraintTop_toBottomOf="@id/btn4"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline1" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_4"
        app:layout_constraintTop_toBottomOf="@id/btn7"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline1" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline1" />

    <Button
        android:id="@+id/btnDel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/del"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintLeft_toLeftOf="@id/guideline3"
        app:layout_constraintRight_toRightOf="@id/guideline5" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plus"
        app:layout_constraintTop_toBottomOf="@id/btnX"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintLeft_toLeftOf="@id/guideline3"
        app:layout_constraintRight_toRightOf="@id/guideline5" />

    <Button
        android:id="@+id/btnX"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/x"
        app:layout_constraintTop_toBottomOf="@id/btnDel"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintLeft_toLeftOf="@id/guideline3"
        app:layout_constraintRight_toRightOf="@id/guideline5" />

    <Button
        android:id="@+id/btnAns"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/ans"
        app:layout_constraintTop_toBottomOf="@id/btnPlus"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintLeft_toLeftOf="@id/guideline3"
        app:layout_constraintRight_toRightOf="@id/guideline5" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        app:layout_constraintRight_toRightOf="@id/guideline3" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_3"
        app:layout_constraintTop_toBottomOf="@id/btn6"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        app:layout_constraintRight_toRightOf="@id/guideline3" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_6"
        app:layout_constraintTop_toBottomOf="@id/btn9"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        app:layout_constraintRight_toRightOf="@id/guideline3" />

    <Button
        android:id="@+id/btnX10X"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/x10x"
        app:layout_constraintTop_toBottomOf="@id/btn3"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        app:layout_constraintRight_toRightOf="@id/guideline3" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintLeft_toLeftOf="@id/guideline1"
        app:layout_constraintRight_toRightOf="@id/guideline2" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_2"
        app:layout_constraintTop_toBottomOf="@id/btn5"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintLeft_toLeftOf="@id/guideline1"
        app:layout_constraintRight_toRightOf="@id/guideline2" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_5"
        app:layout_constraintTop_toBottomOf="@id/btn8"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintLeft_toLeftOf="@id/guideline1"
        app:layout_constraintRight_toRightOf="@id/guideline2" />

    <Button
        android:id="@+id/btnDot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dot"
        app:layout_constraintTop_toBottomOf="@id/btn2"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintLeft_toLeftOf="@id/guideline1"
        app:layout_constraintRight_toRightOf="@id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"
        app:layout_constraintHeight_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4"
        app:layout_constraintHeight_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="247dp"
        app:layout_constraintHeight_percent="0.22" />

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/equals"
        app:layout_constraintTop_toBottomOf="@id/btnMinus"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintLeft_toLeftOf="@id/guideline5"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/minus"
        app:layout_constraintTop_toBottomOf="@id/btnDiv"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintLeft_toLeftOf="@id/guideline5"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/divide"
        app:layout_constraintTop_toBottomOf="@id/btnAc"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintLeft_toLeftOf="@id/guideline5"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnAc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/ac"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintLeft_toLeftOf="@id/guideline5"
        app:layout_constraintRight_toRightOf="parent" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>