<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UnitConverterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:id="@+id/convertLengthOne"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/LengthTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/length"
                        android:textSize="25sp"
                        android:gravity="center"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_margin="@dimen/cardview_default_radius"/>
                    <EditText
                        android:id="@+id/convertLengthOneEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/from"
                        android:inputType="number"
                        android:layout_margin="5sp"
                        app:layout_constraintTop_toBottomOf="@id/LengthTitle"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/convertLengthOneSpinner"/>
                    <Spinner
                        android:id="@+id/convertLengthOneSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@id/convertLengthOneEdit"
                        app:layout_constraintRight_toRightOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/convertLengthTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/convertLengthOne">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/convertLengthTwoEdit"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="@string/to"
                        android:inputType="number"
                        android:layout_margin="5sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/convertLengthTwoSpinner"/>
                    <Spinner
                        android:id="@+id/convertLengthTwoSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:layout_constraintRight_toRightOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:id="@+id/convertMassOne"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                app:layout_constraintTop_toBottomOf="@id/convertLengthTwo">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/MassTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mass"
                        android:textSize="25sp"
                        android:gravity="center"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_margin="@dimen/cardview_default_radius"/>
                    <EditText
                        android:id="@+id/convertMassOneEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/from"
                        android:inputType="number"
                        android:layout_margin="5sp"
                        app:layout_constraintTop_toBottomOf="@id/MassTitle"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/convertMassOneSpinner"/>
                    <Spinner
                        android:id="@+id/convertMassOneSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@id/convertMassOneEdit"
                        app:layout_constraintRight_toRightOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/convertMassTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/convertMassOne">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/convertMassTwoEdit"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="@string/to"
                        android:inputType="number"
                        android:layout_margin="5sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/convertMassTwoSpinner"/>
                    <Spinner
                        android:id="@+id/convertMassTwoSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:layout_constraintRight_toRightOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:id="@+id/convertVolumeOne"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                app:layout_constraintTop_toBottomOf="@id/convertMassTwo">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/VolumeTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/volume"
                        android:textSize="25sp"
                        android:gravity="center"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_margin="@dimen/cardview_default_radius"/>
                    <EditText
                        android:id="@+id/convertVolumeOneEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/from"
                        android:inputType="number"
                        android:layout_margin="5sp"
                        app:layout_constraintTop_toBottomOf="@id/VolumeTitle"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/convertVolumeOneSpinner"/>
                    <Spinner
                        android:id="@+id/convertVolumeOneSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@id/convertVolumeOneEdit"
                        app:layout_constraintRight_toRightOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/convertVolumeTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/convertMassOne">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/convertVolumeTwoEdit"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="@string/to"
                        android:inputType="number"
                        android:layout_margin="5sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/convertVolumeTwoSpinner"/>
                    <Spinner
                        android:id="@+id/convertVolumeTwoSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:layout_constraintRight_toRightOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="60sp"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/calMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="labeled"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>